# viy

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: insights.rs  main.rs  metrics.rs  process_tree.rs  py_trace.rs  sampler.rs
src/terminal/: chart.rs  format.rs  mod.rs  report.rs
tests/: integration.rs  test_workload.py
