[package]
name = "viy"
version = "0.1.0"
edition = "2024"
description = "A lightweight CLI process monitoring tool for Linux"
license = "MIT"
repository = "https://github.com/enkidulan/viy"
keywords = ["monitoring", "profiling", "performance", "cli"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
clap = { version = "4", features = ["derive"] }
procfs = "0.17"
nix = { version = "0.29", features = ["signal", "process"] }
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
